php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #31597 ibase_connect() - incorrect warning
Submitted: 2005-01-18 14:21 UTC Modified: 2005-02-23 21:21 UTC
From: 3tantes at inbox dot lv Assigned:
Status: Closed Package: InterBase related
PHP Version: 5.0.3 OS: Debian
Private report: No CVE-ID: None
 [2005-01-18 14:21 UTC] 3tantes at inbox dot lv
Description:
------------
on
    $rolename = "RO_WEBUSER"; 
    $dbh = @ibase_connect($host, $usrname, $pswrd, "", 0, 3, $rolename)

i get 
    Warning: ibase_connect() [function.ibase-connect.php]: bad parameters on attach or create database CHARACTER SET RO_WEBUSER is not defined in ...

it worked fine on php5.0.1.

maybe it's because the database charset is "NONE", so, when i try
    $ibcharset = "NONE";
    $rolename = "RO_WEBUSER"; 
    $dbh = @ibase_connect($host, $usrname, $pswrd, $ibcharset, 0, 3, $rolename);
it works fine on 5.0.3 too.

where's the problem? something's been changed?

Reproduce code:
---------------
$rolename = "RO_WEBUSER";
$serveraddr = "10.5.8.42";
$dbfilepath = "/home/girts/scr/db/scr.gdb";
$host = "{$serveraddr}:{$dbfilepath}";
if (!($dbh = @ibase_connect($host, $usrname, $pswrd, "", 0, 3, $rolename))) {
    echo "can't connect";
} else {
    echo "connection ok";
}


Expected result:
----------------
connection ok

Actual result:
--------------
Warning: ibase_connect() [function.ibase-connect.php]: bad parameters on attach or create database CHARACTER SET RO_WEBUSER is not defined in ...
can't connect


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-02-23 21:21 UTC] abies@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 09:00:02 2026 UTC