Fixed bug #31597: ibase_connect() - incorrect warning

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@180608 c90b9560-bf6c-de11-be94-00142212c4b1